[package]
name = "tauri-floating-window"
version = "1.0.0"
description = "课堂抽问随机点名 - Tauri 桌面悬浮窗应用"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_floating_window_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
